# jogger

./: .gitignore  Cargo.toml  README.md  build-app-bundle.sh  changelog.md  install-hooks.sh  install-launchagent.sh
.github/workflows/: release.yml  run-clippy.yaml  run-tests.yaml
jogger-core/: Cargo.toml  README.md
jogger-core/src/: jira.rs  lib.rs  preferences.rs  time.rs
jogger-macos/: Cargo.toml  README.md
jogger-macos/src/: helpers.rs  icon.rs  main.rs
jogger-tui/: Cargo.toml
jogger-tui/src/: main.rs
jogger-tui/src/components/: menu.rs  mod.rs  setup.rs  timelog.rs
src/: b64.rs  categories.rs  jira.rs  main.rs  meeting_types.rs  preferences.rs  time.rs
src/components/: menu.rs  mod.rs  setup.rs  timelog.rs
