[package]
name = "time-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
time = { version = "0.3.20", features = ["macros"] }
