[package]
name = "jogger"
version = "0.1.4"
edition = "2021"
description = "A TUI time logging tool for jira"
repository = "https://github.com/BeesBoxler/jogger/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
time = { version = "0.3.20", features = ["macros"] }
