[package]
name = "jogger"
version = "0.2.1"
edition = "2021"
description = "A TUI time logging tool for jira"
repository = "https://github.com/BeesBoxler/jogger/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b64-rs = "1.0.3"
cursive = {version = "0.20.0", features = ["termion-backend"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
time = { version = "0.3.20", features = ["macros"] }
