[package]
name = "jogger-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Jogger - Jira time logging"

[dependencies]
b64-rs = "1.0.3"
dirs = "5.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
time = { version = "0.3.36", features = ["macros", "formatting"] }
